--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,26 @@
 
 # dependencies
 /node_modules
+/.npm/
 /.pnp
 .pnp.js
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
 
 # testing
 /coverage
 
 # production
 /build
+/dist/
 
 # misc
 .DS_Store
+Thumbs.db
+
+/.env*
+!.env.example
 .env.local
 .env.development.local
 .env.test.local
@@ -21,3 +30,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.vscode/
+/.idea/
+/*.suo
+/*.ntvs*
+/*.njsproj
+/*.sln
