--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moments",
+  "name": "lonyapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,10 +7,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
-    "bootstrap": "^4.6.2",
+    "bootstrap": "^5.3.6",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.8",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^5.3.4",
