--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.4.0",
     "msw": "^0.35.0"
   },
   "engines": {
